# skill-arcade

./: LICENSE  README.md
.github/workflows/: backend-merge.yaml  backend-pr.yaml  frontend-merge.yaml  frontend-pr.yaml  merge.yaml  pr.yaml  website-merge.yaml  website-pr.yaml
backend/: Dockerfile  main.py
backend/game_configs/: Breakout.yaml  MontezumaRevenge.yaml
backend/src/: game.py  game_loop.py
frontend/: .gitignore  package-lock.json  vite.config.ts
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/components/: GameManual.tsx  GameState.tsx
website/backend/: .gitignore  Dockerfile  pyproject.toml
website/backend/alembic/: env.py  script.py.mako
website/backend/alembic/versions/: 01ff5c5704d2_add_flag_if_episode_played_on_public_.py  340e3fe39aeb_add_email_column_to_user_table.py  35f09b92a953_init.py  53f90ed694fc_add_transition_time_obs_shown_time_.py
website/backend/src/: auth.py  db.py  game.py  main.py  uploader.py
website/backend/src/configs/: Breakout.v0.yaml  Hanoi.v0.yaml  MontezumaRevenge.v0.yaml  Tetris.v0.yaml
website/backend/src/game/: __init__.py  game.py  game_loop.py
website/backend/src/games/: __init__.py  hanoi.py
website/frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
website/frontend/src/: App.tsx  index.css  vite-env.d.ts
website/frontend/src/components/: AuthModal.tsx  GameCanvas.tsx  GameManual.tsx  ServerStats.tsx
website/frontend/src/context/: AuthContext.tsx
website/frontend/src/controllers/: Breakout.v0.ts  Hanoi.v0.ts  MontezumaRevenge.v0.ts  Tetris.v0.ts  loader.ts
website/frontend/src/hooks/: useKeyboardInput.ts
