[project]
name = "backend"
version = "0"
requires-python = ">=3.13"
dependencies = [
    "ale-py>=0.11.1",
    "fastapi>=0.115.12",
    "gymnasium>=1.1.1",
    "opencv-python>=4.11.0.86",
    "websockets>=15.0.1",
]

[tool.uv]
default-groups = ["skeleton", "game", "database"]  # excludes: dev

[dependency-groups]
database = [
    "sqlmodel>=0.0.24",
]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]
game = [
    "ale-py>=0.11.1",
    "gymnasium>=1.1.1",
    "opencv-python>=4.11.0.86",
]
skeleton = [
    "fastapi[standard]>=0.115.12",
    "websockets>=15.0.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "N",   # pep8-naming
    "I",   # isort
    "B",   # flake8-bugbear
    "S",   # flake8-bandit
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "SIM", # flake8-simplify
    "C90", # mccabe cyclomatic complexity
]
ignore = [
    "S101",  # assert
]
